update pic
